<resources>
    <string name="app_name">EletricCarApp</string>
    <string name="txt_eletric_car">Eletric Car</string>
    <string name="txt_cars">Carros</string>
    <string name="txt_favoritos">Favoritos</string>
    <string name="cd_tesla_model_s_carro_el_trico_da_tesla">Tesla Model S - Carro Elétrico da Tesla</string>
    <string name="tv_price">Preço</string>
    <string name="tv_value">R$ 300.000,00</string>
    <string name="tv_battery">Bateria</string>
    <string name="tv_batteryCapacity">300 kWh</string>
    <string name="tv_power">Potência</string>
    <string name="tv_horsePower">100cv</string>
    <string name="tv_recharge">Recarga\n</string>
    <string name="tv_rechargeValue">30 minutos</string>
    <string name="tv_kwPrice">Preço kWh\n</string>
    <string name="tv_travelledDistance">Km percorrido</string>
    <string name="tv_calculate">Calcular</string>
    <string name="tv_calculate_autonomy">Calcular Autonomia</string>
    <string name="bt_calculate">Botão para fazer cálculo de autonomia do veículo</string>
    <string name="tv_model">Model:</string>
    <string name="tv_model_name">Model S</string>
    <string name="tv_no_connection">Ops, Internet não disponível.</string>
    <string name="response_error">"Algo deu errado, por favor tente novamente mais tarde"</string>
    <string name="saved_calc">saved_calc</string>

    <string-array name="array_cidades">
        <item>Mirassol</item>
        <item>Bady Bassit</item>
        <item>Tanabi</item>

    </string-array>
</resources>