<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_car"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/Gray"
        app:cardCornerRadius="24dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_models"
                android:layout_width="378dp"
                android:layout_height="150dp"
                android:contentDescription="@string/cd_tesla_model_s_carro_el_trico_da_tesla"
                android:src="@drawable/model3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_model"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="60dp"
                android:layout_marginStart="16dp"
                android:text="@string/tv_model"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_models" />

            <TextView
                android:id="@+id/tv_model_name"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tv_model_name"
                app:layout_constraintStart_toEndOf="@id/tv_price"
                app:layout_constraintTop_toBottomOf="@id/iv_models" />

            <TextView
                android:id="@+id/tv_price"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tv_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_model" />

            <TextView
                android:id="@+id/tv_pricevalue"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tv_value"
                app:layout_constraintStart_toEndOf="@id/tv_price"
                app:layout_constraintTop_toBottomOf="@id/tv_model" />

            <TextView
                android:id="@+id/tv_battery"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tv_battery"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_price" />

            <TextView
                android:id="@+id/tv_batteryvalue"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tv_batteryCapacity"
                app:layout_constraintStart_toEndOf="@id/tv_battery"
                app:layout_constraintTop_toBottomOf="@id/tv_price" />

            <TextView
                android:id="@+id/tv_power"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tv_power"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_battery" />

            <TextView
                android:id="@+id/tv_powervalue"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tv_horsePower"
                app:layout_constraintStart_toEndOf="@id/tv_power"
                app:layout_constraintTop_toBottomOf="@id/tv_battery" />

            <TextView
                android:id="@+id/tv_recharge"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tv_recharge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_power" />

            <TextView
                android:id="@+id/tv_rechargevalue"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tv_rechargeValue"
                app:layout_constraintStart_toEndOf="@id/tv_recharge"
                app:layout_constraintTop_toBottomOf="@id/tv_power" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>