<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_closebutton"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_close"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_titlecalculateautonomy"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/tv_calculate_autonomy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_closebutton" />

    <EditText
        android:id="@+id/et_kwhprice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/tv_kwPrice"
        android:inputType="numberDecimal"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_titlecalculateautonomy" />

    <EditText
        android:id="@+id/et_travelleddistance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/tv_travelledDistance"
        android:inputType="numberDecimal"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="@id/et_kwhprice"
        app:layout_constraintStart_toStartOf="@id/et_kwhprice"
        app:layout_constraintTop_toBottomOf="@+id/et_kwhprice" />

    <Button
        android:id="@+id/bt_calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/tv_calculate"
        app:layout_constraintEnd_toEndOf="@id/et_travelleddistance"
        app:layout_constraintStart_toStartOf="@id/et_travelleddistance"
        app:layout_constraintTop_toBottomOf="@id/et_travelleddistance" />

    <TextView
        android:id="@+id/tv_result"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/bt_calculate"
        app:layout_constraintTop_toBottomOf="@id/bt_calculate" />

</androidx.constraintlayout.widget.ConstraintLayout>